# cpp-snake-learning

./: CMakeLists.txt  LESSONS.md  LICENSE  README.md  build-and-run.sh  main.cpp
components/: Point.cpp  Point.h  Snack.cpp  Snack.h  Snake.cpp  Snake.h
game/: Controller.cpp  Controller.h  Game.cpp  Game.h
input-output/: Graphics.cpp  Graphics.h  Player.cpp  Player.h
